--- a/Qitom/address.html
+++ b/Qitom/address.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
 <html><head></head><body>
-<p style='margin:0px; color:#textColor;'>Institut fuer Technische Optik (<a style='color:#linkColor;' href="http://www.ito.uni-stuttgart.de">ITO</a>)</p>
-<p style='margin:0px; color:#textColor;'>Universitaet Stuttgart</p>
-<p style='margin:0px; color:#textColor;'>Prof. Dr. Stephan Reichelt</p>
-<p style='margin:0px; color:#textColor;'>Pfaffenwaldring 9, 70569 Stuttgart, Germany</p>
+<p style='margin:0px; color:#textColor;'>twip optical solutions GmbH (<a style='color:#linkColor;' href="http://www.twip-os.com">twip</a>)</p>
+<p style='margin:0px; color:#textColor;'>Gottlieb-Daimler-Str. 19</p>
+<p style='margin:0px; color:#textColor;'>74385 Pleidelsheim</p>
+<p style='margin:0px; color:#textColor;'>Germany</p>
 </body>
 </html>
