--- a/Qitom/about.html
+++ b/Qitom/about.html
@@ -23,13 +23,10 @@ of the software.
 <p>Upon request, you may obtain a copy of the modified source code by contacting:<br>
 twip optcial solutions GmbH<br>
 Gottlieb-Daimler-Str. 19<br>
-74385 Pleidelsheimg<br>
+74385 Pleidelsheim<br>
 Germany<br>
 info@twip-os.com<br>
 and specifying the exact version of the modified software.</p>
-
-<p>Please report bugs under <a style='color:#linkColor;' href="https://github.com/itom-project/itom/issues">https://github.com/itom-project/itom/issues</a> <br>
-Your itom team</p>
 
 <p><b>Basic information</b>
 <ul>
