--- a/Qitom/about.html
+++ b/Qitom/about.html
@@ -1,4 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
+<!--
+Modified by twip optical solutions GmbH (https://www.twip-os.com). The modifications are
+listed below and the whole project is hosted on https://github.com/twip-os/itom.
+The original version of this software can be found at
+https://github.com/itom-project/itom.
+
+The modified software is still subject to the terms of the GNU Lesser General Public
+License (LGPL), version 2.0.
+
+Modifications:
+15.12.2023  Added information about the modifications and distribution of the source
+            code.
+-->
 <html><head><style type="text/css">
     /*styleinclude*/
 </style></head>
